# options-pricing-engine

./: .gitignore  CMakeLists.txt  README.md  pricing-engine-technical-report.md
.claude/: settings.local.json
benchmarks/: benchmark_main.cpp
include/pricing/: binomial_tree.hpp  black_scholes.hpp  numerics.hpp  option.hpp  option_chain.hpp
scripts/: run_benchmarks.sh
src/: binomial_tree.cpp  black_scholes.cpp  main.cpp  numerics.cpp  option_chain.cpp
tests/: test_greeks_finite_diff.cpp  test_numerical_stability.cpp  test_numerics.cpp  test_performance.cpp  test_pricing_accuracy.cpp
